--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,45 @@ services:
       - ./service_proxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - koterpnetwork
+
+  authservices:
+    build: ./auth_services/
+    container_name: koterp_authservices
+    ports:
+      - 9010:9010
+    networks:
+      - koterpnetwork
+    environment:
+      - NODE_ENV=production
+      - SERVICE_NAME="auth_services"
+      - APP_PORT=9010
+      - APP_HOSTNAME=0.0.0.0
+      - LOGGER_ENABLED=false
+      - LOGGER_LEVEL="info"
+      - DB_USERNAME=root
+      - DB_PASSWORD=admin
+      - DB_NAME=koterp
+      - DB_HOST=koterpdatabase
+
+  companiesservices:
+    build: ./companies_services/
+    container_name: koterp_companiesservices
+    ports:
+      - 9018:9018
+    networks:
+      - koterpnetwork
+    environment:
+      - NODE_ENV=production
+      - SERVICE_NAME="companies_services"
+      - APP_PORT=9018
+      - APP_HOSTNAME=0.0.0.0
+      - LOGGER_ENABLED=false
+      - LOGGER_LEVEL="info"
+      - DB_USERNAME=root
+      - DB_PASSWORD=admin
+      - DB_NAME=koterp
+      - DB_HOST=koterpdatabase
+
   usersservices:
     build: ./users_services/
     container_name: koterp_usersservices
