--- a/service_proxy/nginx.conf
+++ b/service_proxy/nginx.conf
@@ -9,6 +9,16 @@ http {
     server {
         listen 8080;
 
+        location /auth_services {
+            proxy_pass http://authservices:9010;
+            rewrite ^/auth_services(.*)$ $1 break;
+        }
+
+        location /companies_services {
+            proxy_pass http://companiesservices:9018;
+            rewrite ^/companies_services(.*)$ $1 break;
+        }
+
         location /users_services {
             proxy_pass http://usersservices:9021;
             rewrite ^/users_services(.*)$ $1 break;
@@ -27,6 +37,16 @@ http {
         location /products_services {
             proxy_pass http://productsservices:9024;
             rewrite ^/products_services(.*)$ $1 break;
+        }
+
+        location /purchases_services {
+            proxy_pass http://purchasesservices:9025;
+            rewrite ^/purchases_services(.*)$ $1 break;
+        }
+
+        location /sales_services {
+            proxy_pass http://salesservices:9026;
+            rewrite ^/sales_services(.*)$ $1 break;
         }
     }
 }
